examples/errors/strings.go
package errors

type StringStruct struct {
	Value string
}
